compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_decl_wrong_value_stack_size.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "type k : real process a : k end a"
---
"k"@(FileId(1), 5..6) [Type]: alias[DefId(PackageId(0), LocalDefId(0))] of real
"a"@(FileId(1), 22..23) [Subprogram(Process)]: process -> void
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 26..27: cannot use `k` as an expression
| error in file FileId(1) for 26..27: `k` is a reference to a type, not a variable
| note in file FileId(1) for 5..6: `k` declared here
