compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_param_infer_binding.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "function ka(register a : int, b : int, var c : int) r : int\n    bind\n        ra to a, % should fail\n        rb to b,\n        rc to c\n    r := 0 % should fail\nend ka"
---
"ka"@(FileId(1), 9..11) [Subprogram(Function)]: function ( pass(value) register int, pass(value) int, pass(var ref) int, ) -> int
"a"@(FileId(1), 21..22) [Param(Value, Yes)]: int
"b"@(FileId(1), 30..31) [Param(Value, No)]: int
"c"@(FileId(1), 43..44) [Param(Reference(Var), No)]: int
"r"@(FileId(1), 52..53) [Param(Value, No)]: int
"ra"@(FileId(1), 77..79) [Binding(Const, No)]: int
"rb"@(FileId(1), 108..110) [Binding(Const, No)]: int
"rc"@(FileId(1), 125..127) [Binding(Const, No)]: int
"<unnamed>"@(dummy) [Undeclared]: <error>
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 77..84): cannot bind `ra` to `a`
| error for (FileId(1), 83..84): `a` is a reference to a constant register, not a variable
| note for (FileId(1), 21..22): `a` declared here
| info: registers don't have a location in memory, so they cannot be bound to
error at (FileId(1), 139..141): cannot assign into `r`
| error for (FileId(1), 137..138): `r` is a reference to a constant, not a variable
| note for (FileId(1), 52..53): `r` declared here
