compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_result_ty_char_any_err.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "function _ : char(*) end _"
---
"_"@"src/main.t:9..10" [Subprogram(Function)]: function -> char_n Any
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:13..20: invalid storage type
| error for src/main.t:13..20: cannot use `char(*)` in `function` declarations
| info: `char(*)`'s refer to character sequences that do not have a fixed size known at compile-time
