compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_result_ty_string_any_err.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "function _ : string(*) end _"
---
"_"@(FileId(1), 9..10) [Subprogram(Function)]: function -> string_n Any
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 13..22): invalid storage type
| error for (FileId(1), 13..22): cannot use `string(*)` in `function` declarations
| info: `string(*)`'s refer to strings that do not have a fixed size known at compile-time
