compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_ty_char_any_err.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type _ : function () : char(*)"
---
"_"@"src/main.t:5..6" [Type]: alias[DefId(PackageId(3072), LocalDefId(0))] of function ( ) -> char_n Any
"<unnamed>"@"<unknown>:0..0" [Undeclared]: <error>
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:23..30: invalid storage type
| error for src/main.t:23..30: cannot use `char(*)` in `function` types
| info: `char(*)`'s refer to character sequences that do not have a fixed size known at compile-time
