compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_ty_param_attrs.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type _ : procedure (\n    ki : int,\n    var v : int,\n    register r : int,\n    var register vr : int,\n    ci : cheat int,\n    var vci : cheat int,\n    register rci : cheat int,\n    var register vrci : cheat int\n)"
---
"_"@"src/main.t:5..6" [Type]: alias[DefId(PackageId(0), LocalDefId(0))] of procedure ( pass(value) int, pass(var ref) int, pass(value) register int, pass(var ref) register int, pass(value) cheat int, pass(var ref) cheat int, pass(value) register cheat int, pass(var ref) register cheat int, ) -> void
"ki"@"src/main.t:25..27" [Param(Value, No)]: <error>
"v"@"src/main.t:43..44" [Param(Reference(Var), No)]: <error>
"r"@"src/main.t:65..66" [Param(Value, Yes)]: <error>
"vr"@"src/main.t:91..93" [Param(Reference(Var), Yes)]: <error>
"ci"@"src/main.t:105..107" [Param(Value, No)]: <error>
"vci"@"src/main.t:129..132" [Param(Reference(Var), No)]: <error>
"rci"@"src/main.t:159..162" [Param(Value, Yes)]: <error>
"vrci"@"src/main.t:193..197" [Param(Reference(Var), Yes)]: <error>
"<unnamed>"@"<unknown>:0..0" [Undeclared]: <error>
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
